Added Jammming to portfolio

--- a/style.css
+++ b/style.css
@@ -68,6 +68,11 @@ p {
   line-height: 1.4;
 }
 
+a {
+  text-decoration: none;
+  color: #5bd7ac;
+}
+
 .green,
 .current {
   color: #9ffcdb;
@@ -241,10 +246,21 @@ main {
   margin: -0.95rem 1rem 0rem 2.2rem;
 }
 
+.btn-blue {
+  border: none;
+  background-color: rgb(66, 135, 226);
+  padding: 0.5rem 1.5rem;
+  border-radius: 100px;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+}
+
 .portfolio-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 25px;
+  text-align: center;
 }
 
 @media screen and (max-width: 800px) {
