--- a/style.css
+++ b/style.css
@@ -254,6 +254,11 @@ main {
   color: white;
   font-weight: 600;
   cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.btn-blue:hover {
+  background-color: rgb(47, 113, 200);
 }
 
 .portfolio-grid {
